2010-01-06 Jim Garlick <garlick@llnl.gov>

	* : Reorganize and autoconfiscate.

2010-01-03 Jim Garlick <garlick@llnl.gov>

	* : tag 3.3.

	* nfsroot.spec : Revert subpackage split.

2010-01-03 Jim Garlick <garlick@llnl.gov>

	* img/freedos.img : Expand image to 10MB.  Boot with himem enabled.

2010-12-30 Jim Garlick <garlick@llnl.gov>

	* pxelinux.cfg, img/freedos.img : Support serial console.

2010-12-29 Jim Garlick <garlick@llnl.gov>

	* nfsroot.spec : Stop carrying a copy of syslinux executables,
	and simply copy them from syslinux package, now a BuildRequires.

	* pxelinux.*, isolinux.*, nfsroot.spec : Add memtest boot option.

	* pxelinux.*, isolinux.*, nfsroot.spec, img/fdboot.img : Add freedos
	boot option.

	* nfsroot.spec : Split package into three subpackages:
	nfsroot-base, nfsroot-nfs, and nfsroot-livecd.

2010-05-10 Jim Garlick <garlick@llnl.gov>

	* : tag 3.2.

	* sysconfig.nfsroot, rc.nfsroot-kdump, mkinitrd-nfsroot : Add
	nfsvers=3 to default mount options per bz 979.

	* sysconfig.nfsroot : Drop rtc from MODPROBE and e100 from EHT_DEVICES.

2010-05-04 Jim Garlick <garlick@llnl.gov>

	* : tag 3.1.

	* mkinitrd_nfsroot : Copy some files in /etc, and a dlopened shared
	library that mount.nfs needs now (as of rhel6-b1).  Drop some storage
	modules that no longer exist.

	* nfsroot.spec : Depend on genisoimage not mkisofs.
	
2010-03-22 Jim Garlick <garlick@llnl.gov>

	* mkinitrd_nfsroot : Do copy in MODPROBE modules.

2009-07-24 Jim Garlick <garlick@llnl.gov>

	* : tag 3.0.

	* nfsrootfun.sh : RHEL 6 support:
	- modify nrf_copyexec() to handle static executables without errors
	- limit dhcp query to 5 attempts then panic
	- hardwire dhclient request parameters on dhclient cmdline.

	* mkinitrd_nfsroot : Don't copy in dhclient.conf.

	* dhclient.conf : Dropped.

2009-04-18 Jim Garlick <garlick@llnl.gov>

	* : tag 2.16.

	* initrd-init.sh : If ETH0_DEVICE is configured, but loading the
	module doesn't bring up eth0, issue a warning and try ETH_DEVICES