@@ -1,5 +1,0 @@
-pkglibdir = @X_DATADIR@/@PACKAGE@
-
-pkglib_DATA = nfsrootfun.sh
-
-EXTRA_DIST = nfsrootfun.sh
