@@ -5,6 +5,11 @@ man8_MANS = mkinitrd_nfsroot.8
 
 pkglibdir = @X_DATADIR@/@PACKAGE@
 
-pkglib_DATA = initrd-init profile
+pkglib_DATA = initrd-init profile nfsrootfun.sh
 
-EXTRA_DIST = mkinitrd_nfsroot mkinitrd_nfsroot.8 initrd-init profile
+EXTRA_DIST = \
+	profile \
+	initrd-init \
+	nfsrootfun.sh \
+	mkinitrd_nfsroot \
+	mkinitrd_nfsroot.8
