@@ -1,3 +1,7 @@
+2010-01-07 Jim Garlick <garlick@llnl.gov>
+
+	* : Initial dracut integration.
+
 2010-01-06 Jim Garlick <garlick@llnl.gov>
 
 	* : Reorganize and autoconfiscate.
